@@ -38,7 +38,7 @@ import org.jboss.xb.binding.UnmarshallingContext;
 import org.xml.sax.Attributes;
 
 /**
- * A JBossXB Object Model Factory that represets a JBoss WS-Security
+ * A JBossXB Object Model Factory that represents a JBoss WS-Security
  * configuration. See the jboss-ws-security_1_0.xsd file for more info.
  *
  * @author <a href="mailto:jason.greene@jboss.com">Jason T. Greene</a>
@@ -46,14 +46,15 @@ import org.xml.sax.Attributes;
 public class WSSecurityOMFactory implements ObjectModelFactory
 {
 
-   public static String SERVER_RESOURCE_NAME = "jboss-wsse-server.xml";
+   public static final String SERVER_RESOURCE_NAME = "jboss-wsse-server.xml";
 
-   public static String CLIENT_RESOURCE_NAME = "jboss-wsse-client.xml";
+   public static final String CLIENT_RESOURCE_NAME = "jboss-wsse-client.xml";
 
-   private static HashMap options = new HashMap(7);
+   private static HashMap<String, String> options = new HashMap<String, String>(7);
 
    static
    {
+      options.put("security-domain", "setSecurityDomain");
       options.put("key-store-file", "setKeyStoreFile");
       options.put("key-store-type", "setKeyStoreType");
       options.put("key-store-password", "setKeyStorePassword");
@@ -93,6 +94,7 @@ public class WSSecurityOMFactory implements ObjectModelFactory
       }
       catch (JBossXBException e)
       {
+         log.error("Could not parse " + configURL + ":", e);
          IOException ioex = new IOException("Cannot parse: " + configURL);
          Throwable cause = e.getCause();
          if (cause != null)
@@ -181,7 +183,7 @@ public class WSSecurityOMFactory implements ObjectModelFactory
       if ("timestamp-verification".equals(localName))
       {
          //By default, the createdTolerance should be '0'
-         Long createdTolerance = new Long(0);
+         Long createdTolerance = Long.valueOf(0);
          String createdToleranceAttr = attrs.getValue("", "createdTolerance");
          if (createdToleranceAttr != null)
             createdTolerance = (Long)SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_LONG_NAME, createdToleranceAttr, null);
@@ -193,18 +195,28 @@ public class WSSecurityOMFactory implements ObjectModelFactory
             warnCreated = (Boolean)SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, warnCreatedAttr, null);
 
          //By default, the expiresTolerance should be '0'
-         Long expiresTolerance = new Long(0);
+         Long expiresTolerance = Long.valueOf(0);
          String expiresToleranceAttr = attrs.getValue("", "expiresTolerance");
          if (expiresToleranceAttr != null)
             expiresTolerance = (Long)SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_LONG_NAME, expiresToleranceAttr, null);
 
          //By default, we do log warnings if the tolerance is used.
-         Boolean warnExpires = new Boolean(true);
+         Boolean warnExpires = Boolean.valueOf(true);
          String warnExpiresAttr = attrs.getValue("", "warnExpires");
          if (warnExpiresAttr != null)
             warnExpires = (Boolean)SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, warnExpiresAttr, null);
 
          return new TimestampVerification(createdTolerance, warnCreated, expiresTolerance, warnExpires);
+      }
+      if ("security-domain".equals(localName))
+      {
+         String jndi = attrs.getValue("", "jndi");
+         String authToken = attrs.getValue("", "authToken");
+         String useSecurityDomainAliasesAttr = attrs.getValue("", "useSecurityDomainAliases");
+         Boolean useSecurityDomainAliases = new Boolean(true);
+         if (useSecurityDomainAliasesAttr != null)
+            useSecurityDomainAliases = (Boolean)SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, useSecurityDomainAliasesAttr, null);
+         return new SecurityDomain(jndi, authToken, useSecurityDomainAliases);
       }
       return null;
    }
@@ -253,6 +265,16 @@ public class WSSecurityOMFactory implements ObjectModelFactory
    }
 
    /**
+    * Called when parsing SecurityDomain is complete.
+    */
+   public void addChild(WSSecurityConfiguration configuration, SecurityDomain securityDomain, UnmarshallingContext navigator, String namespaceURI,
+         String localName)
+   {
+      log.trace("addChild: [obj=" + configuration + ",child=" + securityDomain + "]");
+      configuration.setSecurityDomain(securityDomain);
+   }
+
+   /**
     * Called when parsing of a new element started.
     */
    public Object newChild(Config config, UnmarshallingContext navigator, String namespaceURI, String localName, Attributes attrs)
@@ -260,18 +282,29 @@ public class WSSecurityOMFactory implements ObjectModelFactory
       log.trace("newChild: " + localName);
       if ("sign".equals(localName))
       {
-         // By default, we alwyas include a timestamp
-         Boolean include = new Boolean(true);
-         String timestamp = attrs.getValue("", "includeTimestamp");
-         if (timestamp != null)
-            include = (Boolean)SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, timestamp, null);
+         // By default, we always include a timestamp
+         boolean includeTimestamp = true;
+         String value = attrs.getValue("", "includeTimestamp");
+         if (value != null)
+            includeTimestamp = (Boolean) SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, value, null);
+         
+         boolean includeFaults = false;
+         value = attrs.getValue("", "includeFaults");
+         if (value != null)
+            includeFaults = (Boolean) SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, value, null);
 
-         return new Sign(attrs.getValue("", "type"), attrs.getValue("", "alias"), include.booleanValue(), attrs.getValue("", "tokenReference"));
+         return new Sign(attrs.getValue("", "type"), attrs.getValue("", "alias"), includeTimestamp, attrs.getValue("", "tokenReference"), attrs.getValue("",
+               "securityDomainAliasLabel"), includeFaults);
       }
       else if ("encrypt".equals(localName))
       {
+         boolean includeFaults = false;
+         String value = attrs.getValue("", "includeFaults");
+         if (value != null)
+            includeFaults = (Boolean) SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, value, null);
+
          return new Encrypt(attrs.getValue("", "type"), attrs.getValue("", "alias"), attrs.getValue("", "algorithm"), attrs.getValue("", "keyWrapAlgorithm"), attrs
-               .getValue("", "tokenReference"));
+               .getValue("", "tokenReference"), attrs.getValue("", "securityDomainAliasLabel"), includeFaults);
       }
       else if ("timestamp".equals(localName))
       {
@@ -284,19 +317,19 @@ public class WSSecurityOMFactory implements ObjectModelFactory
       else if ("username".equals(localName))
       {
          //By default, we do not use password digest
-         Boolean digestPassword = new Boolean(false);
+         Boolean digestPassword = Boolean.valueOf(false);
          String digestPasswordAttr = attrs.getValue("", "digestPassword");
          if (digestPasswordAttr != null)
             digestPassword = (Boolean)SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, digestPasswordAttr, null);
 
          //if password digest is enabled, we use nonces by default
-         Boolean useNonce = new Boolean(true);
+         Boolean useNonce = Boolean.valueOf(true);
          String useNonceAttr = attrs.getValue("", "useNonce");
          if (useNonceAttr != null)
             useNonce = (Boolean)SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, useNonceAttr, null);
 
          //if password digest is enabled, we use the created element by default
-         Boolean useCreated = new Boolean(true);
+         Boolean useCreated = Boolean.valueOf(true);
          String useCreatedAttr = attrs.getValue("", "useCreated");
          if (useCreatedAttr != null)
             useCreated = (Boolean)SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, useCreatedAttr, null);
@@ -306,6 +339,10 @@ public class WSSecurityOMFactory implements ObjectModelFactory
       else if ("authenticate".equals(localName))
       {
          return new Authenticate();
+      }
+      else if ("authorize".equals(localName))
+      {
+         return new Authorize();
       }
 
       return null;
@@ -363,7 +400,7 @@ public class WSSecurityOMFactory implements ObjectModelFactory
    {
       log.trace("addChild: [obj=" + config + ",child=" + authenticate + "]");
       config.setAuthenticate(authenticate);
-   }
+   }     
    
    /**
     * Called when parsing character is complete.
@@ -372,7 +409,7 @@ public class WSSecurityOMFactory implements ObjectModelFactory
    {
       log.trace("addChild: [obj=" + authenticate + ",child=" + usernameAuth + "]");
       authenticate.setUsernameAuth(usernameAuth);
-   }
+   }    
    
    /**
     * Called when parsing character is complete.
@@ -382,7 +419,34 @@ public class WSSecurityOMFactory implements ObjectModelFactory
       log.trace("addChild: [obj=" + authenticate + ",child=" + signatureCertAuth + "]");
       authenticate.setSignatureCertAuth(signatureCertAuth);
    }
-
+   
+   /**
+    * Called when parsing character is complete.
+    */
+   public void addChild(Config config, Authorize authorize, UnmarshallingContext navigator, String namespaceURI, String localName)
+   {
+      log.trace("addChild: [obj=" + config + ",child=" + authorize + "]");
+      config.setAuthorize(authorize);
+   }
+   
+   /**
+    * Called when parsing character is complete.
+    */
+   public void addChild(Authorize authorize, Unchecked unchecked, UnmarshallingContext navigator, String namespaceURI, String localName)
+   {
+      log.trace("addChild: [obj=" + authorize + ",child=" + unchecked + "]");
+      authorize.setUnchecked(unchecked);
+   }
+   
+   /**
+    * Called when parsing character is complete.
+    */
+   public void addChild(Authorize authorize, Role role, UnmarshallingContext navigator, String namespaceURI, String localName)
+   {
+      log.trace("addChild: [obj=" + authorize + ",child=" + role + "]");
+      authorize.addRole(role);
+   }   
+   
    private Object handleTargets(Object object, UnmarshallingContext navigator, String namespaceURI, String localName, Attributes attrs)
    {
       log.trace("newChild: " + localName);
@@ -421,11 +485,21 @@ public class WSSecurityOMFactory implements ObjectModelFactory
       log.trace("newChild: " + localName);
       if ("signature".equals(localName))
       {
-         return new RequireSignature();
+         boolean includeFaults = false;
+         String value = attrs.getValue("", "includeFaults");
+         if (value != null)
+            includeFaults = (Boolean) SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, value, null);
+
+         return new RequireSignature(includeFaults);
       }
       else if ("encryption".equals(localName))
       {
-         return new RequireEncryption();
+         boolean includeFaults = false;
+         String value = attrs.getValue("", "includeFaults");
+         if (value != null)
+            includeFaults = (Boolean) SimpleTypeBindings.unmarshal(SimpleTypeBindings.XS_BOOLEAN_NAME, value, null);
+
+         return new RequireEncryption(includeFaults);
       }
       else if ("timestamp".equals(localName))
       {
@@ -452,6 +526,24 @@ public class WSSecurityOMFactory implements ObjectModelFactory
 
       return null;
    }
+   
+   /**
+    * Called when parsing of a new element started.
+    */
+   public Object newChild(Authorize authorize, UnmarshallingContext navigator, String namespaceURI, String localName, Attributes attrs)
+   {
+      log.trace("newChild: " + localName);
+      if ("unchecked".equals(localName))
+      {
+         return new Unchecked();
+      }
+      else if ("role".equals(localName))
+      {
+         return new Role();
+      }
+
+      return null;
+   }   
 
    /**
     * Called when parsing of a new element started.
@@ -475,6 +567,13 @@ public class WSSecurityOMFactory implements ObjectModelFactory
 
       target.setValue(value);
    }
+   
+   public void setValue(Role role, UnmarshallingContext navigator, String namespaceURI, String localName, String value)
+   {
+      log.trace("setValue: [obj=" + role + ",value=" + value + "]");
+
+      role.setName(value);
+   }   
 
    /**
     * Called when parsing character is complete.
